--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="icon.png" sizes="16x16" type="image/png">
+    <link href="homeworks/style.css" rel="stylesheet">
+    <title>Homework JS</title>
 </head>
+
 <body>
-    
+
+    <div class="container">
+        <h2>Разработка веб-приложений на JavaScript</h2>
+
+        <!-- homework 1 -->
+        <div class="homework">
+            <div>
+                <input type="checkbox" id="hw1_task1" /><label for="hw1_task1"><a
+                        href="homeworks/hw_01/anketa.html" target="_blank"> N.03 Домашнее задание ANKETA</a></label>
+            </div>
+        </div>
+
+    </div>
 </body>
+
 </html>
