task2 and update task1

--- a/homeworks/hw_01/anketa.html
+++ b/homeworks/hw_01/anketa.html
@@ -7,12 +7,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../../icon.png" sizes="16x16" type="image/png">
     <link href="../style.css" rel="stylesheet">
-        <title>№ 03</title>
+    <title>№ 03</title>
 </head>
 
 <body>
     <div class="container">
         <h1>N.03 Домашнее задание ANKETA*</h1>
+        <div class="homework">Создать проект ANKETA. Спросить у пользователя:
+            <ul>
+                <li>фамилию, имя, отчество РАЗДЕЛЬНО (оператором prompt)</li>
+                <li>возраст в годах (оператором prompt)</li>
+                <li>пол (оператором confirm, например, "ваш пол - мужской?")</li>
+            </ul><br>
+            и вывести оператором alert анкету пользователя по примеру:<br><br>
+            <div class="sample">
+                ваше ФИО: Иванов Иван Иванович<br>
+                ваш возраст в годах: 20<br>
+                ваш возраст в днях: 7300<br>
+                через 5 лет вам будет: 25<br>
+                ваш пол: мужской<br>
+                вы на пенсии: нет<br><br>
+            </div>
+            Должен быть контроль корректности вводимых пользователем данных (например, фамилия не должна быть пустой,
+            возраст должен быть корректной цифрой и т.д.).<br>
+            Оператор alert в коде должен использоваться ровно один раз.
+        </div>
+        <div class="button" onclick="completeQuestionnaire();">Заполнить анкету</div>
         <p>*В 2023 году возраст выхода на пенсию составляет 58 лет для женщин и 63 года для мужчин</p>
 
     </div>
