--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
 
         <!-- homework 1 -->
         <div class="homework">
-            <div>
+            <div class="task">
                 <input type="checkbox" id="hw1_task1" /><label for="hw1_task1"><a
                         href="homeworks/hw_01/anketa.html" target="_blank"> N.03 Домашнее задание ANKETA</a></label>
+            </div>
+            <div class="task">
+                <input type="checkbox" id="hw2_task1" /><label for="hw1_task1"><a
+                        href="homeworks/hw_02/treesum.html" target="_blank"> N.05 Домашнее задание TREESUM</a></label>
             </div>
         </div>
 
