--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="icon.png" sizes="16x16" type="image/png">
-    <link href="homeworks/style.css" rel="stylesheet">
+    <link href="homeworks/css/style.css" rel="stylesheet">
     <title>Homework JS</title>
 </head>
 
