--- a/index.html
+++ b/index.html
@@ -15,15 +15,22 @@
     <div class="container">
         <h2>Разработка веб-приложений на JavaScript</h2>
 
-        <!-- homework 1 -->
         <div class="homework">
             <div class="task">
-                <input type="checkbox" id="hw1_task1" /><label for="hw1_task1"><a
+                <input type="checkbox" id="hw1" /><label for="hw1"><a
                         href="homeworks/hw_01/anketa.html" target="_blank"> N.03 Домашнее задание ANKETA</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="hw2_task1" /><label for="hw1_task1"><a
+                <input type="checkbox" id="hw2" /><label for="hw2"><a
                         href="homeworks/hw_02/treesum.html" target="_blank"> N.05 Домашнее задание TREESUM</a></label>
+            </div>
+            <div class="task">
+                <input type="checkbox" id="hw3" /><label for="hw3"><a
+                        href="homeworks/hw_03/vowels.html" target="_blank"> N.07 Домашнее задание VOWELS</a></label>
+            </div>
+            <div class="task">
+                <input type="checkbox" id="hw4" /><label for="hw4"><a
+                        href="homeworks/hw_04/mood.html" target="_blank"> N.10 Домашнее задание MOOD</a></label>
             </div>
         </div>
 
