changed textarea style

--- a/homeworks/hw_03/vowels.html
+++ b/homeworks/hw_03/vowels.html
@@ -18,7 +18,7 @@
             <p>Регулярные выражения (кто умеет) не использовать.</p>
             <p>Спросить у пользователя строку. Вывести в консоль количество русских гласных букв в ней.</p>
         </div>
-        <textarea id = "userString" type="text"  placeholder = "Введите текст"></textarea>
+        <textarea id = "userString" placeholder = "Введите текст" rows="4" cols="50"></textarea>
         <div class="button" onclick="calc();">Рассчитать</div>
         <div id="numberOfVowels"></div>
     </div>
