--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         href="homeworks/hw_01/anketa.html" target="_blank"> N.03 Домашнее задание ANKETA</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="hw2" /><label for="hw2"><a
+                <input type="checkbox" id="hw2" checked/><label for="hw2"><a
                         href="homeworks/hw_02/treesum.html" target="_blank"> N.05 Домашнее задание TREESUM</a></label>
             </div>
             <div class="task">
