--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="homework">
             <div class="task">
                 <input type="checkbox" id="hw1" /><label for="hw1"><a
-                        href="homeworks/hw_01/anketa.html" target="_blank"> N.03 Домашнее задание ANKETA</a></label>
+                        href="homeworks/hw_01/anketa.html" target="_blank"> N.03 Домашнее задание ANKETA (updated 2023-03-12 21:07)</a></label>
             </div>
             <div class="task">
                 <input type="checkbox" id="hw2" checked/><label for="hw2"><a
