--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                 <input type="checkbox" id="hw4" /><label for="hw4"><a
                         href="homeworks/hw_04/mood.html" target="_blank"> N.10 Домашнее задание MOOD</a></label>
             </div>
+            <div class="task">
+                <input type="checkbox" id="hw5" /><label for="hw5"><a
+                        href="homeworks/hw_05/drinks_hash_func.html" target="_blank"> N.13 Домашнее задание DRINKS_HASH_FUNC</a></label>
+            </div>
         </div>
 
     </div>
