--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
                 <input type="checkbox" id="hw5" /><label for="hw5"><a
                         href="homeworks/hw_05/drinks_hash_func.html" target="_blank"> N.13 Домашнее задание DRINKS_HASH_FUNC</a></label>
             </div>
+            <div class="task">
+                <input type="checkbox" id="hw6" /><label for="hw6"><a
+                        href="homeworks/hw_06/drinks_hash_class.html" target="_blank"> N.14 Домашнее задание DRINKS_HASH_CLASS</a></label>
+            </div>
+
         </div>
 
     </div>
