--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
                 <input type="checkbox" id="hw6" /><label for="hw6"><a
                         href="homeworks/hw_06/drinks_hash_class.html" target="_blank"> N.14 Домашнее задание DRINKS_HASH_CLASS</a></label>
             </div>
-
+            <div class="task">
+                <input type="checkbox" id="hw7" /><label for="hw7"><a
+                        href="homeworks/hw_07/vowels_arr.html" target="_blank"> N.17 Домашнее задание VOWELS_ARR</a></label>
+            </div>
         </div>
 
     </div>
