--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
                 <input type="checkbox" id="hw8" /><label for="hw8"><a
                         href="homeworks/hw_08/roots.html" target="_blank"> N.20 Домашнее задание ROOTS</a></label>
             </div>
+
+            <div class="task">
+                <input type="checkbox" id="hw9" /><label for="hw9"><a
+                        href="homeworks/hw_09/dyn_form.html" target="_blank"> N.23 Домашнее задание DYN_FORM (in process: it is necessary to optimize the code according to patterns)</a></label>
+            </div>
         </div>
 
     </div>
