--- a/homeworks/hw_09/dyn_form.html
+++ b/homeworks/hw_09/dyn_form.html
@@ -7,71 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../../icon.png" sizes="16x16" type="image/png">
     <link href="../../homeworks/css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet"> 
     <title>№ 23</title>
-    <style>
-        form {
-            border: gray 1px solid;
-            padding: 10px;
-            margin-top: 20px;
-        }
-        form>div {
-            position: relative;
-        }
-
-        label {
-            text-align: left;
-            display: block;
-            margin-right: 10px;
-            margin-top: 3px;
-            height: 20px;
-            width: 150px;
-        }
-
-        label+input,
-        label+select,
-        label+div {
-            position: absolute;
-            top: 0;
-            right: 0;
-            left: 150px;
-            height: 20px;
-        }
-
-        textarea {
-            width: 100%;
-        }
-
-        label+input[type="submit"] {
-            position: relative;
-        }
-
-        label+input[data-kind="longtext"] {
-            max-width: 100%;
-        }
-
-        label+input[data-kind="number"] {
-            max-width: 80px;
-        }
-
-        label+input[data-kind="shorttext"],
-        label+select[data-kind="combo"],
-        label+input[dataKind="shorttext"],
-        label+select[dataKind="combo"] {
-            max-width: 200px;
-        }
-
-        input[type="radio"] {
-            margin-right: 5px;
-        }
-
-        input[type="radio"]+span {
-            margin-right: 10px;
-        }
-
-        input[type="checkbox"] {
-            max-width: 15px;
-        }
-    </style>
 </head>
 
 <body>
@@ -83,8 +20,7 @@
                 Вызвать эту функцию дважды с указанными ниже массивами, чтобы она построила на веб-странице две формы по
                 указанным ниже образцам. Точном соответствия внешнего вида форм образцам добиваться не обязательно.
                 В качестве скрипта, обрабатывающего данные форм (атрибут action тега form), можно указывать
-                https://fe.it-academy.by/TestForm.php</p>
-            
+                https://fe.it-academy.by/TestForm.php</p>            
         </div>
         <div class="homework" id = "solution">
         </div>
