--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
             <div class="task">
                 <input type="checkbox" id="hw9" /><label for="hw9"><a
-                        href="homeworks/hw_09/dyn_form.html" target="_blank"> N.23 Домашнее задание DYN_FORM (in process: it is necessary to optimize the code according to patterns)</a></label>
+                        href="homeworks/hw_09/dyn_form.html" target="_blank"> N.23 Домашнее задание DYN_FORM</a></label>
             </div>
         </div>
 
