--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         href="homeworks/hw_02/treesum.html" target="_blank"> N.05 Домашнее задание TREESUM</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="hw3" /><label for="hw3"><a
+                <input type="checkbox" id="hw3" checked/><label for="hw3"><a
                         href="homeworks/hw_03/vowels.html" target="_blank"> N.07 Домашнее задание VOWELS</a></label>
             </div>
             <div class="task">
