--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                         href="homeworks/hw_03/vowels.html" target="_blank"> N.07 Домашнее задание VOWELS</a></label>
             </div>
             <div class="task">
+                <input type="checkbox" id="extra_01" /><label for="extra_01"><a
+                        href="homeworks/extra/extra_01/index.html" target="_blank"> N.A2+ Домашнее задание SPACES</a></label>
+            </div>        
+            <div class="task">
                 <input type="checkbox" id="hw4" /><label for="hw4"><a
                         href="homeworks/hw_04/mood.html" target="_blank"> N.10 Домашнее задание MOOD</a></label>
             </div>
