improvement tasks: roots, vowels

--- a/homeworks/hw_08/roots.html
+++ b/homeworks/hw_08/roots.html
@@ -7,20 +7,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../../icon.png" sizes="16x16" type="image/png">
     <link href="../../homeworks/css/style.css" rel="stylesheet">
+    <!-- подключаем стили Mocha, для отображения результатов -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/2.1.0/mocha.css">
+    <!-- подключаем библиотеку Mocha -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/2.1.0/mocha.js"></script>
+    <!-- настраиваем Mocha: предстоит BDD-тестирование -->
+    <script>
+        mocha.setup('bdd');
+    </script>
+
+    <!-- подключаем chai -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/2.0.0/chai.js"></script>
+    <!-- в chai есть много всего, выносим assert в глобальную область -->
+    <script>
+        var assert = chai.assert;
+    </script>
     <title>№ 20</title>
 </head>
 
 <body>
     <div class="container">
+        <!-- в этом скрипте находятся спеки -->
+
         <h1>N.20 Домашнее задание ROOTS</h1>
         <div class="homework">
             <p>Найти ошибку в функции нахождения корней квадратного уравнения (см. слайды по теме «Тесты»).</p>
             <p>Доработать функцию так, чтобы тесты проходили успешно.</p>
         </div>
-        <div class="button" onclick="ttt();">Рассчитать</div>    
-        <div class="button" onclick="squareRootsTests();">Тесты</div>
+        <div class="button" onclick="ttt();">Рассчитать</div>
+        <div class="button" onclick="squareRootsTests();">Тесты в лог</div>
+        <div class="button" onclick="mocha.run();">Тесты mocha</div>
+        <div id="mocha"></div>
+
+        <!-- запустить тесты! -->
+
     </div>
     <script src="roots.js"></script>
+    <script src="test.js"></script>
+
 </body>
 
 </html>
