--- a/index.html
+++ b/index.html
@@ -45,12 +45,16 @@
                         href="homeworks/hw_06/drinks_hash_class.html" target="_blank"> N.14 Домашнее задание DRINKS_HASH_CLASS</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="hw7" /><label for="hw7"><a
+                <input type="checkbox" id="hw7" checked/><label for="hw7"><a
                         href="homeworks/hw_07/vowels_arr.html" target="_blank"> N.17 Домашнее задание VOWELS_ARR</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="hw8" /><label for="hw8"><a
+                <input type="checkbox" id="hw8" checked/><label for="hw8"><a
                         href="homeworks/hw_08/roots.html" target="_blank"> N.20 Домашнее задание ROOTS</a></label>
+            </div>
+            <div class="task">
+                <input type="checkbox" id="extra_03"/><label for="extra_03"><a
+                        href="homeworks/extra/extra_03/index.html" target="_blank"> N.A3+ Домашнее задание ПАЛИНДРОМ</a></label>
             </div>
 
             <div class="task">
