added extra task 04

--- a/index.html
+++ b/index.html
@@ -53,10 +53,13 @@
                         href="homeworks/hw_08/roots.html" target="_blank"> N.20 Домашнее задание ROOTS</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="extra_03"/><label for="extra_03"><a
+                <input type="checkbox" id="extra_03" checked/><label for="extra_03"><a
                         href="homeworks/extra/extra_03/index.html" target="_blank"> N.A3+ Домашнее задание ПАЛИНДРОМ</a></label>
             </div>
-
+            <div class="task">
+                <input type="checkbox" id="extra_04"/><label for="extra_04"><a
+                        href="homeworks/extra/extra_04/index.html" target="_blank"> N.A4+ Домашнее задание ПАЛИНДРОМ</a></label>
+            </div>
             <div class="task">
                 <input type="checkbox" id="hw9" /><label for="hw9"><a
                         href="homeworks/hw_09/dyn_form.html" target="_blank"> N.23 Домашнее задание DYN_FORM</a></label>
