changed checked states

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         href="homeworks/extra/extra_04/index.html" target="_blank"> N.A4+ Домашнее задание ПАЛИНДРОМ</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="extra_b6" checked/><label for="extra_b6"><a
+                <input type="checkbox" id="extra_b6"/><label for="extra_b6"><a
                         href="homeworks/extra/extra_b6/index.html" target="_blank"> N.B6+ Домашнее задание TAG</a></label>
             </div>
             <div class="task">
