--- a/index.html
+++ b/index.html
@@ -61,8 +61,12 @@
                         href="homeworks/extra/extra_04/index.html" target="_blank"> N.A4+ Домашнее задание ПАЛИНДРОМ</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="extra_b6"/><label for="extra_b6"><a
+                <input type="checkbox" id="extra_b6" checked/><label for="extra_b6"><a
                         href="homeworks/extra/extra_b6/index.html" target="_blank"> N.B6+ Домашнее задание TAG</a></label>
+            </div>
+            <div class="task">
+                <input type="checkbox" id="extra_c2" /><label for="extra_c2"><a
+                        href="homeworks/extra/extra_c2/index.html" target="_blank"> N.B6+ Домашнее задание DeepCopy</a></label>
             </div>
             <div class="task">
                 <input type="checkbox" id="hw9" /><label for="hw9"><a
