--- a/index.html
+++ b/index.html
@@ -65,8 +65,12 @@
                         href="homeworks/extra/extra_b6/index.html" target="_blank"> N.B6+ Домашнее задание TAG</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="extra_c2" /><label for="extra_c2"><a
-                        href="homeworks/extra/extra_c2/index.html" target="_blank"> N.B6+ Домашнее задание DeepCopy</a></label>
+                <input type="checkbox" id="extra_c2" checked/><label for="extra_c2"><a
+                        href="homeworks/extra/extra_c2/index.html" target="_blank"> N.C2+ Домашнее задание DeepCopy</a></label>
+            </div>
+            <div class="task">
+                <input type="checkbox" id="extra_c3" /><label for="extra_c3"><a
+                        href="homeworks/extra/extra_c3/index.html" target="_blank"> N.C3+ Домашнее задание DeepComp</a></label>
             </div>
             <div class="task">
                 <input type="checkbox" id="hw9" /><label for="hw9"><a
