corrected according to comments

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         href="homeworks/extra/extra_c2/index.html" target="_blank"> N.C2+ Домашнее задание DeepCopy</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="extra_c3" /><label for="extra_c3"><a
+                <input type="checkbox" id="extra_c3" checked/><label for="extra_c3"><a
                         href="homeworks/extra/extra_c3/index.html" target="_blank"> N.C3+ Домашнее задание DeepComp</a></label>
             </div>
             <div class="task">
