added extra task c3

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                         href="homeworks/hw_04/mood.html" target="_blank"> N.10 Домашнее задание MOOD</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="hw5" /><label for="hw5"><a
+                <input type="checkbox" id="hw5" checked/><label for="hw5"><a
                         href="homeworks/hw_05/drinks_hash_func.html" target="_blank"> N.13 Домашнее задание DRINKS_HASH_FUNC</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="hw6" /><label for="hw6"><a
+                <input type="checkbox" id="hw6" checked/><label for="hw6"><a
                         href="homeworks/hw_06/drinks_hash_class.html" target="_blank"> N.14 Домашнее задание DRINKS_HASH_CLASS</a></label>
             </div>
             <div class="task">
@@ -71,6 +71,10 @@
             <div class="task">
                 <input type="checkbox" id="extra_c3" checked/><label for="extra_c3"><a
                         href="homeworks/extra/extra_c3/index.html" target="_blank"> N.C3+ Домашнее задание DeepComp</a></label>
+            </div>
+            <div class="task">
+                <input type="checkbox" id="extra_b3" checked/><label for="extra_b3"><a
+                        href="homeworks/extra/extra_b3/index.html" target="_blank"> N.b2+ Домашнее задание Calc</a></label>
             </div>
             <div class="task">
                 <input type="checkbox" id="hw9" /><label for="hw9"><a
