--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                         href="homeworks/extra/extra_c3/index.html" target="_blank"> N.C3+ Домашнее задание DeepComp</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="extra_b3" checked/><label for="extra_b3"><a
-                        href="homeworks/extra/extra_b3/index.html" target="_blank"> N.b2+ Домашнее задание Calc</a></label>
+                <input type="checkbox" id="extra_b3" /><label for="extra_b3"><a
+                        href="homeworks/extra/extra_b3/index.html" target="_blank"> N.B3+ Домашнее задание Calc</a></label>
             </div>
             <div class="task">
                 <input type="checkbox" id="hw9" /><label for="hw9"><a
