--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         href="homeworks/extra/extra_b3/index.html" target="_blank"> N.B3+ Домашнее задание Calc</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="extra_b4"/><label for="extra_b4"><a
+                <input type="checkbox" id="extra_b4" checked/><label for="extra_b4"><a
                         href="homeworks/extra/extra_b4/index.html" target="_blank"> N.B4+ Домашнее задание BFS</a></label>
             </div>
             <div class="task">
