--- a/index.html
+++ b/index.html
@@ -81,8 +81,12 @@
                         href="homeworks/extra/extra_b4/index.html" target="_blank"> N.B4+ Домашнее задание BFS</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="hw9" /><label for="hw9"><a
-                        href="homeworks/hw_09/dyn_form.html" target="_blank"> N.23 Домашнее задание DYN_FORM</a></label>
+                <input type="checkbox" id="hw23" /><label for="hw23"><a
+                        href="homeworks/hw_23/dyn_form.html" target="_blank"> N.23 Домашнее задание DYN_FORM</a></label>
+            </div>
+            <div class="task">
+                <input type="checkbox" id="hw27" /><label for="hw27"><a
+                        href="homeworks/hw_27/valid_form.html" target="_blank"> N.27 Домашнее задание VALID_FORM</a></label>
             </div>
         </div>
 
