--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
                 <input type="checkbox" id="hw27" /><label for="hw27"><a
                         href="homeworks/hw_27/valid_form.html" target="_blank"> N.27 Домашнее задание VALID_FORM</a></label>
             </div>
+            <div class="task">
+                <input type="checkbox" id="hw30" /><label for="hw30"><a
+                        href="homeworks/hw_30/dragndrop.html" target="_blank"> N.30 Домашнее задание DRAGNDROP</a></label>
+            </div>
         </div>
 
     </div>
