set checked task

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         href="homeworks/extra/extra_b4/index.html" target="_blank"> N.B4+ Домашнее задание BFS</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="hw23" /><label for="hw23"><a
+                <input type="checkbox" id="hw23" checked/><label for="hw23"><a
                         href="homeworks/hw_23/dyn_form.html" target="_blank"> N.23 Домашнее задание DYN_FORM</a></label>
             </div>
             <div class="task">
