--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         href="homeworks/hw_23/dyn_form.html" target="_blank"> N.23 Домашнее задание DYN_FORM</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="hw27" /><label for="hw27"><a
+                <input type="checkbox" id="hw27" checked/><label for="hw27"><a
                         href="homeworks/hw_27/valid_form.html" target="_blank"> N.27 Домашнее задание VALID_FORM</a></label>
             </div>
             <div class="task">
