changed main page

--- a/index.html
+++ b/index.html
@@ -89,8 +89,12 @@
                         href="homeworks/hw_27/valid_form.html" target="_blank"> N.27 Домашнее задание VALID_FORM</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="hw30" /><label for="hw30"><a
+                <input type="checkbox" id="hw30" checked/><label for="hw30"><a
                         href="homeworks/hw_30/dragndrop.html" target="_blank"> N.30 Домашнее задание DRAGNDROP</a></label>
+            </div>
+            <div class="task">
+                <input type="checkbox" id="extra_d1" /><label for="extra_d1"><a
+                        href="homeworks/extra/extra_d1/index.html" target="_blank"> N.D1+ Домашнее задание SIZE-EDITOR</a></label>
             </div>
         </div>
 
