--- a/homeworks/extra/extra_d1/index.html
+++ b/homeworks/extra/extra_d1/index.html
@@ -10,6 +10,7 @@
     <style>
         * {
             margin: 0;
+            box-sizing: border-box;
         }
 
         img {
@@ -20,6 +21,8 @@
             top: 100px;
             left: 100px;
             cursor: grab;
+
+            border: royalblue 1px solid;
         }
 
         div {
