--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         href="homeworks/hw_30/dragndrop.html" target="_blank"> N.30 Домашнее задание DRAGNDROP</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="extra_d1" /><label for="extra_d1"><a
+                <input type="checkbox" id="extra_d1" checked/><label for="extra_d1"><a
                         href="homeworks/extra/extra_d1/index.html" target="_blank"> N.D1+ Домашнее задание SIZE-EDITOR</a></label>
             </div>
         </div>
