--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         href="homeworks/extra/extra_d1/index.html" target="_blank"> N.D1+ Домашнее задание SIZE-EDITOR</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="extra_e3"/><label for="extra_e3"><a
+                <input type="checkbox" id="extra_e3" checked/><label for="extra_e3"><a
                         href="homeworks/extra/extra_e3/index.html" target="_blank"> N.E3+ Домашнее задание POP-UP MENU</a></label>
             </div>
         </div>
