added task clock_dom

--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
                 <input type="checkbox" id="extra_e3" checked/><label for="extra_e3"><a
                         href="homeworks/extra/extra_e3/index.html" target="_blank"> N.E3+ Домашнее задание POP-UP MENU</a></label>
             </div>
+            <div class="task">
+                <input type="checkbox" id="hw33"/><label for="hw33"><a
+                        href="homeworks/hw_33/index.html" target="_blank"> N.33 Домашнее задание CLOCK DOM</a></label>
+            </div>
         </div>
 
     </div>
