added task clock svg

--- a/homeworks/hw_37/index.html
+++ b/homeworks/hw_37/index.html
@@ -8,18 +8,21 @@
     <link rel="icon" href="../../icon.png" sizes="16x16" type="image/png">
     <link href="../../homeworks/css/style.css" rel="stylesheet">
     <link href="./css/styles.css" rel="stylesheet">
-    <title>№ 33</title>
+    <title>№ 37</title>
 </head>
 
 <body>
     <div class="container">
-        <h1>N.33 Домашнее задание CLOCK_DOM</h1>
+        <h1>N.37 Домашнее задание CLOCK_SVG</h1>
         <div id="homework1" class="homework">
             <div class="center">
                 <input type="number" id="clockSize" name="clockSize" value="200" min="200" max="800">
                 <div onclick="createClock();">Построить часы</div>
             </div>
         </div>
+<!--         <svg width="300" height="200">
+            <rect width="100%" height="100%" fill="green" />
+        </svg> -->
         <script src="js/Clock.js"></script>
         <script src="js/main.js"></script>
 </body>
