--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
                 <input type="checkbox" id="hw33"/><label for="hw33"><a
                         href="homeworks/hw_33/index.html" target="_blank"> N.33 Домашнее задание CLOCK DOM</a></label>
             </div>
+            <div class="task">
+                <input type="checkbox" id="hw37"/><label for="hw37"><a
+                        href="homeworks/hw_37/index.html" target="_blank"> N.37 Домашнее задание CLOCK SVG</a></label>
+            </div>
         </div>
 
     </div>
