--- a/index.html
+++ b/index.html
@@ -17,96 +17,112 @@
 
         <div class="homework">
             <div class="task">
-                <input type="checkbox" id="hw1" checked/><label for="hw1"><a
-                        href="homeworks/hw_01/anketa.html" target="_blank"> N.03 Домашнее задание ANKETA (updated 2023-03-12 21:07)</a></label>
+                <input type="checkbox" id="hw1" checked /><label for="hw1"><a href="homeworks/hw_01/anketa.html"
+                        target="_blank"> N.03 Домашнее задание ANKETA (updated 2023-03-12 21:07)</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="hw2" checked/><label for="hw2"><a
-                        href="homeworks/hw_02/treesum.html" target="_blank"> N.05 Домашнее задание TREESUM</a></label>
+                <input type="checkbox" id="hw2" checked /><label for="hw2"><a href="homeworks/hw_02/treesum.html"
+                        target="_blank"> N.05 Домашнее задание TREESUM</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="hw3" checked/><label for="hw3"><a
-                        href="homeworks/hw_03/vowels.html" target="_blank"> N.07 Домашнее задание VOWELS</a></label>
+                <input type="checkbox" id="hw3" checked /><label for="hw3"><a href="homeworks/hw_03/vowels.html"
+                        target="_blank"> N.07 Домашнее задание VOWELS</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="extra_01" checked/><label for="extra_01"><a
-                        href="homeworks/extra/extra_01/index.html" target="_blank"> N.A2+ Домашнее задание SPACES</a></label>
-            </div>        
-            <div class="task">
-                <input type="checkbox" id="hw4" checked/><label for="hw4"><a
-                        href="homeworks/hw_04/mood.html" target="_blank"> N.10 Домашнее задание MOOD</a></label>
+                <input type="checkbox" id="extra_01" checked /><label for="extra_01"><a
+                        href="homeworks/extra/extra_01/index.html" target="_blank"> N.A2+ Домашнее задание
+                        SPACES</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="hw5" checked/><label for="hw5"><a
-                        href="homeworks/hw_05/drinks_hash_func.html" target="_blank"> N.13 Домашнее задание DRINKS_HASH_FUNC</a></label>
+                <input type="checkbox" id="hw4" checked /><label for="hw4"><a href="homeworks/hw_04/mood.html"
+                        target="_blank"> N.10 Домашнее задание MOOD</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="hw6" checked/><label for="hw6"><a
-                        href="homeworks/hw_06/drinks_hash_class.html" target="_blank"> N.14 Домашнее задание DRINKS_HASH_CLASS</a></label>
+                <input type="checkbox" id="hw5" checked /><label for="hw5"><a
+                        href="homeworks/hw_05/drinks_hash_func.html" target="_blank"> N.13 Домашнее задание
+                        DRINKS_HASH_FUNC</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="hw7" checked/><label for="hw7"><a
-                        href="homeworks/hw_07/vowels_arr.html" target="_blank"> N.17 Домашнее задание VOWELS_ARR</a></label>
+                <input type="checkbox" id="hw6" checked /><label for="hw6"><a
+                        href="homeworks/hw_06/drinks_hash_class.html" target="_blank"> N.14 Домашнее задание
+                        DRINKS_HASH_CLASS</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="hw8" checked/><label for="hw8"><a
-                        href="homeworks/hw_08/roots.html" target="_blank"> N.20 Домашнее задание ROOTS</a></label>
+                <input type="checkbox" id="hw7" checked /><label for="hw7"><a href="homeworks/hw_07/vowels_arr.html"
+                        target="_blank"> N.17 Домашнее задание VOWELS_ARR</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="extra_03" checked/><label for="extra_03"><a
-                        href="homeworks/extra/extra_03/index.html" target="_blank"> N.A3+ Домашнее задание ПАЛИНДРОМ</a></label>
+                <input type="checkbox" id="hw8" checked /><label for="hw8"><a href="homeworks/hw_08/roots.html"
+                        target="_blank"> N.20 Домашнее задание ROOTS</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="extra_04" checked/><label for="extra_04"><a
-                        href="homeworks/extra/extra_04/index.html" target="_blank"> N.A4+ Домашнее задание ПАЛИНДРОМ</a></label>
+                <input type="checkbox" id="extra_03" checked /><label for="extra_03"><a
+                        href="homeworks/extra/extra_03/index.html" target="_blank"> N.A3+ Домашнее задание
+                        ПАЛИНДРОМ</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="extra_b6" checked/><label for="extra_b6"><a
-                        href="homeworks/extra/extra_b6/index.html" target="_blank"> N.B6+ Домашнее задание TAG</a></label>
+                <input type="checkbox" id="extra_04" checked /><label for="extra_04"><a
+                        href="homeworks/extra/extra_04/index.html" target="_blank"> N.A4+ Домашнее задание
+                        ПАЛИНДРОМ</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="extra_c2" checked/><label for="extra_c2"><a
-                        href="homeworks/extra/extra_c2/index.html" target="_blank"> N.C2+ Домашнее задание DeepCopy</a></label>
+                <input type="checkbox" id="extra_b6" checked /><label for="extra_b6"><a
+                        href="homeworks/extra/extra_b6/index.html" target="_blank"> N.B6+ Домашнее задание
+                        TAG</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="extra_c3" checked/><label for="extra_c3"><a
-                        href="homeworks/extra/extra_c3/index.html" target="_blank"> N.C3+ Домашнее задание DeepComp</a></label>
+                <input type="checkbox" id="extra_c2" checked /><label for="extra_c2"><a
+                        href="homeworks/extra/extra_c2/index.html" target="_blank"> N.C2+ Домашнее задание
+                        DeepCopy</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="extra_b3" checked/><label for="extra_b3"><a
-                        href="homeworks/extra/extra_b3/index.html" target="_blank"> N.B3+ Домашнее задание Calc</a></label>
+                <input type="checkbox" id="extra_c3" checked /><label for="extra_c3"><a
+                        href="homeworks/extra/extra_c3/index.html" target="_blank"> N.C3+ Домашнее задание
+                        DeepComp</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="extra_b4" checked/><label for="extra_b4"><a
-                        href="homeworks/extra/extra_b4/index.html" target="_blank"> N.B4+ Домашнее задание BFS</a></label>
+                <input type="checkbox" id="extra_b3" checked /><label for="extra_b3"><a
+                        href="homeworks/extra/extra_b3/index.html" target="_blank"> N.B3+ Домашнее задание
+                        Calc</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="hw23" checked/><label for="hw23"><a
-                        href="homeworks/hw_23/dyn_form.html" target="_blank"> N.23 Домашнее задание DYN_FORM</a></label>
+                <input type="checkbox" id="extra_b4" checked /><label for="extra_b4"><a
+                        href="homeworks/extra/extra_b4/index.html" target="_blank"> N.B4+ Домашнее задание
+                        BFS</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="hw27" checked/><label for="hw27"><a
-                        href="homeworks/hw_27/valid_form.html" target="_blank"> N.27 Домашнее задание VALID_FORM</a></label>
+                <input type="checkbox" id="hw23" checked /><label for="hw23"><a href="homeworks/hw_23/dyn_form.html"
+                        target="_blank"> N.23 Домашнее задание DYN_FORM</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="hw30" checked/><label for="hw30"><a
-                        href="homeworks/hw_30/dragndrop.html" target="_blank"> N.30 Домашнее задание DRAGNDROP</a></label>
+                <input type="checkbox" id="hw27" checked /><label for="hw27"><a href="homeworks/hw_27/valid_form.html"
+                        target="_blank"> N.27 Домашнее задание VALID_FORM</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="extra_d1" checked/><label for="extra_d1"><a
-                        href="homeworks/extra/extra_d1/index.html" target="_blank"> N.D1+ Домашнее задание SIZE-EDITOR</a></label>
+                <input type="checkbox" id="hw30" checked /><label for="hw30"><a href="homeworks/hw_30/dragndrop.html"
+                        target="_blank"> N.30 Домашнее задание DRAGNDROP</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="extra_e3" checked/><label for="extra_e3"><a
-                        href="homeworks/extra/extra_e3/index.html" target="_blank"> N.E3+ Домашнее задание POP-UP MENU</a></label>
+                <input type="checkbox" id="extra_d1" checked /><label for="extra_d1"><a
+                        href="homeworks/extra/extra_d1/index.html" target="_blank"> N.D1+ Домашнее задание
+                        SIZE-EDITOR</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="hw33"/><label for="hw33"><a
-                        href="homeworks/hw_33/index.html" target="_blank"> N.33 Домашнее задание CLOCK DOM</a></label>
+                <input type="checkbox" id="extra_e3" checked /><label for="extra_e3"><a
+                        href="homeworks/extra/extra_e3/index.html" target="_blank"> N.E3+ Домашнее задание POP-UP
+                        MENU</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="hw37"/><label for="hw37"><a
-                        href="homeworks/hw_37/index.html" target="_blank"> N.37 Домашнее задание CLOCK SVG</a></label>
+                <input type="checkbox" id="hw33" checked/><label for="hw33"><a href="homeworks/hw_33/index.html"
+                        target="_blank"> N.33 Домашнее задание CLOCK DOM</a></label>
+            </div>
+            <div class="task">
+                <input type="checkbox" id="hw37" checked/><label for="hw37"><a href="homeworks/hw_37/index.html"
+                        target="_blank"> N.37 Домашнее задание CLOCK SVG</a></label>
+            </div>
+            <div class="task">
+                <input type="checkbox" id="hw40" /><label for="hw37"><a href="homeworks/hw_40/index.html"
+                        target="_blank"> N.40 Домашнее задание CLOCK Canvas</a></label>
             </div>
         </div>
 
