added tenis with DOM

--- a/homeworks/hw_43/index.html
+++ b/homeworks/hw_43/index.html
@@ -8,21 +8,20 @@
     <link rel="icon" href="../../icon.png" sizes="16x16" type="image/png">
     <link href="../../homeworks/css/style.css" rel="stylesheet">
     <link href="./css/styles.css" rel="stylesheet">
-    <title>№ 40</title>
+    <title>№ 43</title>
 </head>
 
 <body>
     <div class="container">
-        <h1>N.40 Домашнее задание CLOCK_CANVAS</h1>
-        <div id="homework1" class="homework">
+        <h1>N.43 Домашнее задание TENIS_DOM</h1>
+        <div class="homework">
             <div class="center">
-                <input type="number" id="clockSize" name="clockSize" value="200" min="200" max="800">
-                <div id="showBtn">Построить часы</div>
+                <div id="showBtn">Начать</div>
             </div>
             <div id="solution1"></div>
         </div>
 
-        <script type="module" src="js/ClockController.js"></script>
+        <script type="module" src="js/game.js"></script>
 </body>
 
 </html>
