--- a/index.html
+++ b/index.html
@@ -121,8 +121,12 @@
                         target="_blank"> N.37 Домашнее задание CLOCK SVG</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="hw40" /><label for="hw37"><a href="homeworks/hw_40/index.html"
+                <input type="checkbox" id="hw40" /><label for="hw40"><a href="homeworks/hw_40/index.html"
                         target="_blank"> N.40 Домашнее задание CLOCK Canvas</a></label>
+            </div>
+            <div class="task">
+                <input type="checkbox" id="hw43" /><label for="hw43"><a href="homeworks/hw_43/index.html"
+                        target="_blank"> N.43 Домашнее задание TENNIS_DOM</a></label>
             </div>
         </div>
 
