added tennis canvas

--- a/homeworks/hw_43/index.html
+++ b/homeworks/hw_43/index.html
@@ -15,10 +15,16 @@
     <div class="container">
         <h1>N.43 Домашнее задание TENIS_DOM</h1>
         <div class="homework">
-            <div class="center">
-                <div id="showBtn">Начать</div>
+            <div class="form">
+                <select id="selectView">
+                    <option value="DOM">DOM</option>
+                    <option value="Canvas">Canvas</option>
+                    <option value="SVG">SVG</option>
+                </select>
+                <div id="btnOK" class="btn">ОК</div>
             </div>
-            <div id="solution1"></div>
+            <div id="solution1">
+            </div>
         </div>
 
         <script type="module" src="js/game.js"></script>
