--- a/homeworks/hw_43/index.html
+++ b/homeworks/hw_43/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../../icon.png" sizes="16x16" type="image/png">
     <link href="../../homeworks/css/style.css" rel="stylesheet">
-    <link href="./css/styles.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
     <title>№ 43</title>
 </head>
 
