marked checked tasks

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         target="_blank"> N.40 Домашнее задание CLOCK Canvas</a></label>
             </div>
             <div class="task">
-                <input type="checkbox" id="hw43" /><label for="hw43"><a href="homeworks/hw_43/index.html"
+                <input type="checkbox" id="hw43" checked/><label for="hw43"><a href="homeworks/hw_43/index.html"
                         target="_blank"> N.43 Домашнее задание TENNIS_DOM, TENNIS_Canvas, TENNIS_SVG</a></label>
             </div>
         </div>
