--- a/index.html
+++ b/index.html
@@ -128,6 +128,15 @@
                 <input type="checkbox" id="hw43" checked/><label for="hw43"><a href="homeworks/hw_43/index.html"
                         target="_blank"> N.43 Домашнее задание TENNIS_DOM, TENNIS_Canvas, TENNIS_SVG</a></label>
             </div>
+            <div class="task">
+                <input type="checkbox" id="hw53"/><label for="hw53"><a href="homeworks/hw_53/index.html"
+                        target="_blank"> N.53 Домашнее задание DRINK_LOC_STORAGE</a></label>
+            </div>
+            <div class="task">
+                <input type="checkbox" id="extra_h"/><label for="extra_h"><a 
+                    href="homeworks/extra/extra_h/index.html" target="_blank">
+                    N.H+ Домашнее задание Раскраска</a></label>
+            </div>
         </div>
 
     </div>
