added controllers to finish project

--- a/homeworks/extra/extra_h/index.html
+++ b/homeworks/extra/extra_h/index.html
@@ -17,13 +17,16 @@
             <div id="fill" title="Заливка"></div>
             <div id="pencil" title="Карандаш"></div>
             <div id="undo" title="Отменить"></div>
-            <div id="trash" title="Очистить"></div>
+            <div id="clear" title="Очистить"></div>
             <div id="save" title="Сохранить"></div>
         </div>
     </div>
     <div class="main">
         <div id="field1" class="field field-size__vertical">
-            <canvas id="canvas1" width="800" height="800">
+            <canvas class="background" width="800" height="800">
+                Обновите браузер
+            </canvas>
+            <canvas class="draw" width="800" height="800">
                 Обновите браузер
             </canvas>
         </div>
