changed sound in final project

--- a/homeworks/extra/extra_h/index.html
+++ b/homeworks/extra/extra_h/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="../../../icon.png" sizes="16x16" type="image/png">
     <link rel="stylesheet" href="css/style.css">
     <title>H+</title>
+    <bgsound src="sounds/fone.mp3" loop="1" volume="1000" />
 </head>
 
 <body>
@@ -19,6 +20,7 @@
             <div id="undo" title="Отменить"></div>
             <div id="clear" title="Очистить"></div>
             <div id="save" title="Сохранить"></div>
+            <div id="music" title="Музыка">Music</div>
         </div>
     </div>
     <div class="main">
