--- a/homeworks/extra/extra_h/index.html
+++ b/homeworks/extra/extra_h/index.html
@@ -12,30 +12,30 @@
 </head>
 
 <body>
-    <div id="palette">
-<!--         <input type="color" id="color" name="head" value="#e66465"> -->
-        <div class="palette-commands">
-            <div id="fill" title="Заливка"></div>
-            <div id="pencil" title="Карандаш"></div>
-            <div id="undo" title="Отменить"></div>
-            <div id="clear" title="Очистить"></div>
-            <div id="save" title="Сохранить"></div>
-            <div id="music" title="Музыка">Music</div>
+    <div class="some_field">
+        <div id="palette">
+            <div class="palette-commands">
+                <div id="fill" title="Заливка"></div>
+                <div id="pencil" title="Карандаш"></div>
+                <div id="undo" title="Отменить"></div>
+                <div id="clear" title="Очистить"></div>
+                <div id="save" title="Сохранить"></div>
+                <div id="music" title="Музыка">Music</div>
+            </div>
+        </div>
+        <div class="main">
+            <div id="field1" class="field field-size__vertical">
+                <canvas class="background" width="800" height="800">
+                    Обновите браузер
+                </canvas>
+                <canvas class="draw" width="800" height="800">
+                    Обновите браузер
+                </canvas>
+            </div>
+            <div id="colors1" class="colors">
+            </div>
         </div>
     </div>
-    <div class="main">
-        <div id="field1" class="field field-size__vertical">
-            <canvas class="background" width="800" height="800">
-                Обновите браузер
-            </canvas>
-            <canvas class="draw" width="800" height="800">
-                Обновите браузер
-            </canvas>
-        </div>
-        <div id="colors1" class="colors">
-        </div>
-    </div>
-
 
     <script type="module" src="js/paint.js"></script>
 
