added upload images

--- a/homeworks/extra/extra_h/index.html
+++ b/homeworks/extra/extra_h/index.html
@@ -20,7 +20,8 @@
                 <div id="undo" title="Отменить"></div>
                 <div id="clear" title="Очистить"></div>
                 <div id="save" title="Сохранить"></div>
-                <div id="music" title="Музыка">Music</div>
+                <div id="change" title="Сменить картинку"></div>
+                <div id="music" class = "music" title="Музыка"></div>
             </div>
         </div>
         <div class="main">
@@ -36,8 +37,8 @@
             </div>
         </div>
     </div>
-
-    <script type="module" src="js/paint.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script type="module" src="js/paint.js" defer crossorigin="anonymous"></script>
 
 </body>
 
